--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 **/.idea/**/*.iml
 **/.idea/**/contentModel.xml
 **/.idea/**/modules.xml
+**/.idea/**/.idea/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
